# adsb-feeder

./: Cargo.toml  sample.env
mqtt-k3s/: README.md
mqtt-k3s/config/: pwfile
mqtt-k3s/data/: mosquitto.db
src/: adsb_parser.rs  kafka_publisher.rs  main.rs  mqtt_publisher.rs
