[package]
name = "adsb-feeder"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
rumqttc = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
indicatif = "0.17"
rdkafka = { version = "0.36", features = ["ssl"] }
tokio = { version = "1", features = ["full"] }
